--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.15",
     "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
+    "hamburger-react": "^2.5.0",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.28",
